Added Darcy project

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
 						<h2>Recent Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/nolanglenn/darcy" class="image fit thumb" target="_blank"><img src="images/thumbs/darcy.png" alt="" /></a>
+								<h3>Darcy</h3>
+								<p>Darcy is a python app that utilizes the speech recognition library and Google's text-to-speech technology to perform basic tasks.<br />Technologies: Python, Google TTS</p>
+								<a href="https://github.com/nolanglenn/darcy" target="_blank">Code</a>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://task-trader.herokuapp.com" class="image fit thumb" target="_blank"><img src="images/thumbs/task-trader.png" alt="" /></a>
 								<h3>Task Trader</h3>
 								<p>A job board app designed for Real Estate Agents.<br /> Technologies: MERN, GraphQL, Redux</p><br />
