Added AWS File Handler Project

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
 						<h2>Recent Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/nolanglenn/auto-file-handler-AWS" class="image fit thumb" target="_blank"><img src="images/thumbs/auto_file_handler.png" alt="" /></a>
+								<h3>Python AWS Auto File Handler</h3>
+								<p>This is a simple script using Python and AWS to automatically upload files within the working directory to the corresponding S3 bucket.<br />Technologies: Python, AWS</p>
+								<a href="https://github.com/nolanglenn/auto-file-handler-AWS" target="_blank">Code</a>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/nolanglenn/darcy" class="image fit thumb" target="_blank"><img src="images/thumbs/darcy.png" alt="" /></a>
 								<h3>Darcy</h3>
 								<p>Darcy is a python app that utilizes the speech recognition library and Google's text-to-speech technology to perform basic tasks.<br />Technologies: Python, Google TTS</p>
