Navi project added.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
 						<h2>Recent Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://discord.gg/dcPs4K" class="image fit thumb" target="_blank"><img src="images/thumbs/navi.png" alt="" /></a>
+								<h3>Navi</h3>
+								<p>Navi is a Discord bot for the New Game Plus server that allows users to search for retro games from the IGDB API.<br />Technologies: Python, AWS, EC2, Google API</p>
+								<a href="https://github.com/nolanglenn/navi" target="_blank">Code</a>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/nolanglenn/auto-file-handler-AWS" class="image fit thumb" target="_blank"><img src="images/thumbs/auto_file_handler.png" alt="" /></a>
 								<h3>Python AWS Auto File Handler</h3>
 								<p>This is a simple script using Python and AWS to automatically upload files within the working directory to the corresponding S3 bucket.<br />Technologies: Python, AWS</p>
