Updated Discord link and profile pic.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.png" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/avatar2.jpg" alt="" /></a>
 					<h1><strong>My name is Nolan Glenn</strong>.<br />
 					I'm a web developer,<br /> and this is some of my work.<br />
 				</div>
@@ -41,7 +41,7 @@
 						<h2>Recent Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://discord.gg/dcPs4K" class="image fit thumb" target="_blank"><img src="images/thumbs/navi.png" alt="" /></a>
+								<a href="https://discord.gg/H6FrudYhxg" class="image fit thumb" target="_blank"><img src="images/thumbs/navi.png" alt="" /></a>
 								<h3>Navi</h3>
 								<p>Navi is a Discord bot for the New Game Plus server that allows users to search for retro games from the IGDB API.<br />Technologies: Python, AWS, EC2, Google API</p>
 								<a href="https://github.com/nolanglenn/navi" target="_blank">Code</a>
